objects/ca2cq_Zone_community__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds mapping between original Zone id and final community Id</description>
    <fields>
        <fullName>Active_for_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <description>Id of the community that will host new Question Feeds</description>
        <inlineHelpText>Id of the community that will host new Question Feeds</inlineHelpText>
        <label>Community Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoneId__c</fullName>
        <description>ID of the original Chatter Answers Zone</description>
        <inlineHelpText>ID of the original Chatter Answers Zone</inlineHelpText>
        <label>Original Chatter Zone Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Zone to Community</label>
</CustomObject>